fixed css styling for currentUser edit form. comments and replies now adjust height depending on the length of the comment, no more overflow

--- a/react-interactive-comments-section/src/Components/Comment.scss
+++ b/react-interactive-comments-section/src/Components/Comment.scss
@@ -16,10 +16,11 @@ $white: hsl(0, 0%, 100%);
   align-items: center;
   background-color: $white;
   width: 600px;
-  height: 120px;
+   min-height: 120px;
   border-radius: 10px;
   padding: 10px 25px 10px 25px;
   margin: 10px;
+  overflow: hidden;
 }
 
 .vote {
@@ -124,4 +125,26 @@ $white: hsl(0, 0%, 100%);
 .reply:hover {
  cursor: pointer;
  filter: opacity(60%);
+}
+
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  align-items:flex-end;
+  padding: 10px 0;
+  
+}
+
+.comment-edit-form-field {
+  border-color: $light-gray;
+  border-radius: 10px;
+  padding: 10px;
+  height: 70px;
+  width: 500px;
+  resize: none;
+  font-family: "Rubik", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: $grayish-blue;
+  
 }
