--- a/react-interactive-comments-section/src/Components/PostedReply.scss
+++ b/react-interactive-comments-section/src/Components/PostedReply.scss
@@ -27,6 +27,7 @@ padding:10px;
   border-radius: 10px;
   padding: 10px 25px 0px;
   margin-left: auto;
+  overflow: hidden;
   
 }
 
